--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "ext-json": "*"
   },
   "require-dev": {
+    "symfony/web-server-bundle": "^4.4.2"
   },
   "config": {
     "preferred-install": {
